--- a/app/views/explicit/documentation/_page.html.erb
+++ b/app/views/explicit/documentation/_page.html.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title><%= page_title || "API Documentation" %></title>
+  <meta charset="UTF-8">
 
   <% if favicon_url %>
     <link rel="icon" href="<%= favicon_url %>" />
