display nullable indication in web docs

--- a/app/views/explicit/documentation/_attribute.html.erb
+++ b/app/views/explicit/documentation/_attribute.html.erb
@@ -5,6 +5,7 @@
     </span>
 
     <span class="text-sm text-neutral-500">
+      <%= "nullable" if type.nilable %>
       <%= type.summary %>
     </span>
 
