improve bigdecimal documentation

--- a/app/views/explicit/documentation/type/_big_decimal.html.erb
+++ b/app/views/explicit/documentation/type/_big_decimal.html.erb
@@ -1,3 +1,7 @@
+<p>
+  A string-encoded decimal number. For example: <code>"123.45"</code>.
+</p>
+
 <%= type_constraints do %>
   <%= type_constraint "min:", type.min if type.min.present? %>
   <%= type_constraint "max:", type.max if type.max.present? %>
